fix layout bugs

--- a/desafio-sync360/src/styles/components/App.sass
+++ b/desafio-sync360/src/styles/components/App.sass
@@ -26,8 +26,6 @@
 .infos
     display: grid
     grid-template-columns: 14vw 20vw
-    min-height: 67vh
-    justify-content: center
 
 h2:hover, label:hover
     cursor: default
