--- a/desafio-sync360/src/styles/components/ContainerForm.sass
+++ b/desafio-sync360/src/styles/components/ContainerForm.sass
@@ -1,5 +1,13 @@
 @use '../../variables'
 
+.titulo-perfil
+    margin-bottom: 0
+
+.enviar-imagem
+    height: 1.5rem
+    width: 7rem
+    margin: 1.7rem 0 0 0.3rem
+
 .dados-escritos
     background-color: #1d1d1d
     color: #fff
@@ -8,10 +16,6 @@
     height: 1.8rem
     padding-left: 0.5rem
 
-.enviar-imagem
-    height: 1.5rem
-    width: 7rem
-    margin: 1.7rem 0 0 0.3rem
 
 .container-error
   position: absolute
@@ -31,7 +35,6 @@
     flex-direction: column
     align-items: center
     justify-content: center
-    // width: 25rem
 
 .biografia-form
     width: 100%
@@ -51,7 +54,7 @@ textarea
     max-height: 30vw
     max-width: 34vw
     margin-top: 0.5rem 
-    padding: 0.5rem 0 0 0.5rem
+    padding: 0.5rem
     
 button
     cursor: pointer
