--- a/desafio-sync360/src/styles/components/ContainerPerfil.sass
+++ b/desafio-sync360/src/styles/components/ContainerPerfil.sass
@@ -47,7 +47,7 @@
 .biografia-especial
     display: flex
     text-align: left
-    padding: 0.5rem 0 0 0.5rem
+    padding: 0.5rem
     background-color: #1d1d1d
     min-height: 10vw
     max-width: 34vw
