--- a/desafio-sync360/src/styles/components/MediaQueries.sass
+++ b/desafio-sync360/src/styles/components/MediaQueries.sass
@@ -1,6 +1,7 @@
 @media only screen and (max-width: 550px)
     .App
         width: 90vw
+        justify-content: space-between
 
     .infos
         display: flex
@@ -8,10 +9,14 @@
         width: 35vw
 
     .categoria
-        margin-top: 1.7rem
+        margin-top: 1rem
 
-    .dados, .dados-especial, .dados-escritos
+    .dados, .dados-especial
         margin: 1rem 0 0 0
+
+
+    .dados-especial, .dados
+        justify-content: center
 
     .biografia-perfil
         text-align: center
@@ -19,11 +24,18 @@
 
     .biografia-especial
         margin: 1rem 0 0 0
-        width: 33vw
+        width: 31vw
 
     .enviar-imagem
-        margin: 1rem auto 0 auto
-        background: #111
-        width: 100%
+        margin: 1rem auto 0 3.5vw
+        color: #111
+        width: 94%
+
+    .dados-escritos
+        margin: 1rem 0 0 1rem
+
+    .container-error
+        margin: 2.5vh 0 0 0.5vw
+        width: 9rem
 
     
